# ML-Frameworks

./: .gitignore  README.md  main.py  pyproject.toml
Assignments/: 03_intro_ml_framework.ipynb  05_unsupervised_learning.ipynb  Intro.ipynb  L1.py  assignments_4.ipynb  assignments_5.ipynb  assignments_6.ipynb  l1.ipynb
Code_alongs/: 04_scikit_learn_api.ipynb  06._deep_learning.ipynb  06_deep_learning.ipynb  09_lightning_fastai.ipynb  10_transfer_learning.ipynb  11_model_integration.ipynb  data.dvc  metrics_LogReg_02.json  metrics_LogReg_025.json
Code_alongs/Lecture 7/: dvc_quick_guide.md
Code_alongs/Lecture-06/: Pytorch_vs_Keras_Syntax.md  Tensors 101.md
Code_alongs/Lecture-07/: chain_rule_walkthrough.ipynb  optimizations_paths_visualization.py  training_loop.md
Code_alongs/Lecture-08/: 08_ml_pipelines.ipynb  metrics_SVM_03.json
Code_alongs/Lecture-09/: Lightning_vs_Vanilla_pytorch.ipynb  lightningmodule_struktur.md
Code_alongs/Lecture-10/: 10_transfer_learning.ipynb  dataloader_optimizing_num_workers_pin_memory.md  transfer_learning_image_data.ipynb
Code_alongs/Lecture-11/: 11_model_integration.ipynb
Code_alongs/Lecture-12/: README-docker-compose.md  docker-compose.yml  dockerfile
Code_alongs/Lecture-12/Frontend/: dockerfile  index.html
Code_alongs/Lecture-13/: 13_Future_trends_and_ethics.ipynb  ethics_tools_resources.md  jax_speed_test.ipynb
Code_alongs/Lecture-7/: 07_autodiff_optimization.ipynb
Code_alongs/Lecture-8/: 08_ml_pipelines.ipynb  MLOps Lifecycle.md  pipeline_components_diagram.md
Code_alongs/Lecture-9/: 09_lightning_fastai.ipynb
