[project]
name = "ml-ramverk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ipykernel>=7.1.0",
  "numpy>=2.4.1",
  "scikit-learn>=1.8.0",
  "torch",
  "torchvision",
  "torchaudio",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/test/cu128"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
