[project]
name = "ml-ramverk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ipykernel>=7.1.0",
  "numpy>=2.4.1",
  "scikit-learn>=1.8.0",
  "torch",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "torchvision>=0.25.0",
  "pytorch-lightning>=2.6.1",
  "onnx>=1.20.1",
  "onnxscript>=0.6.2",
  "jax>=0.9.1",
]
